syntax = "proto3";

package info.scce.cincocloud.proto;

option java_multiple_files = false;
option java_generic_services = true;
option java_outer_classname = "CincoCloudProtos";

message CreateImageRequest {
    uint64 projectId = 1;
    bytes archive = 2;
}

message CreateImageReply {
    uint64 projectId = 1;
}

message GetGeneratedAppArchiveRequest {
    uint64 projectId = 1;
}

message GetGeneratedAppArchiveReply {
    uint64 projectId = 1;
    bytes archive = 2;
}

message GetBuildJobStatusRequest {
    uint64 jobId = 1;
}

message BuildJobStatus {
    uint64 jobId = 1;
    enum Status {
        PENDING = 0;
        BUILDING = 1;
        FINISHED_WITH_SUCCESS = 2;
        FINISHED_WITH_FAILURE = 3;
        ABORTED = 4;
    }
    Status status = 2;
}

service MainService {
    rpc CreateImageFromArchive (CreateImageRequest) returns (CreateImageReply) {
    }

    rpc GetGeneratedAppArchive (GetGeneratedAppArchiveRequest) returns (GetGeneratedAppArchiveReply) {
    }

    rpc GetBuildJobStatus (GetBuildJobStatusRequest) returns (BuildJobStatus) {
    }

    rpc SetBuildJobStatus (BuildJobStatus) returns (BuildJobStatus) {
    }
}
